# eco-path

./: .gitignore  Dockerfile.prod  README.md  docker-compose.yml  heroku.yml
server/: pyproject.toml
server/apps/analysis/: apps.py  build_data.py  config.py  excel_to_csv.py  urls.py
server/apps/api/: routers.py  viewsets.py
server/apps/db/: admin.py  apps.py  business_logic.py  models.py
server/config/: urls.py  wsgi.py
server/config/migrations/db/: 0001_initial.py  0002_rename_disabilityrequirements_disabilityrequirement.py  0003_alter_point_characteristics.py  0004_auto_20210916_2208.py  0005_alter_disabilitytype_requirements.py  0006_auto_20210921_1506.py  0007_rename_disabilitytype_peopletype.py  0008_alter_peopletype_requirements.py  0009_auto_20210921_2013.py  0010_auto_20210925_0829.py  0011_auto_20210925_0911.py  0012_alter_point_options.py  0013_point_value.py  0014_auto_20210925_1723.py  0015_auto_20210925_1724.py
server/config/settings/: installed_apps.py  settings.py
